--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "version": "1.0.0",
     "require": {
         "php": "~7.1.0||~7.2.0||~7.3.0",
-        "magento/framework": "102.0.*"
+        "magento/framework": "102.0.*",
+        "msp/twofactorauth": "3.1.*"
     },
     "license": [
         "GPL-3.0"
