--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type": "magento2-module",
     "version": "1.0.0",
     "require": {
-        "php": "~7.1.0||~7.2.0||~7.3.0",
+        "php": "~7.2.0||~7.3.0",
         "magento/framework": "102.0.*",
         "msp/twofactorauth": "3.1.*"
     },
