--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": "~7.2.0||~7.3.0",
         "magento/framework": "102.0.*",
+        "magento/customer": "102.0.*",
+        "magento/checkout": "100.3.*",
         "msp/twofactorauth": "3.1.*"
     },
     "license": [
