--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,17 @@
     "homepage": "https://github.com/magetarian/customerTwoFactorAuth",
     "type": "magento2-module",
     "version": "1.0.0",
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://repo.magento.com/"
+        }
+    ],
     "require": {
         "php": "~7.2.0||~7.3.0",
         "magento/framework": "102.0.*",
-        "magento/customer": "102.0.*",
-        "magento/checkout": "100.3.*",
+        "magento/module-customer": "102.0.*",
+        "magento/module-checkout": "100.3.*",
         "msp/twofactorauth": "3.1.*"
     },
     "license": [
@@ -27,12 +33,6 @@
     "require-dev": {
         "phpunit/phpunit": "*"
     },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://repo.magento.com/"
-        }
-    ],
     "autoload": {
         "files": [ "registration.php" ],
         "psr-4": {
