--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,5 +12,9 @@ install:
     stage: build
     script:
         - composer config --global http-basic.repo.magento.com $COMPOSER_USER $COMPOSER_PASSWORD
-        - composer install
+        - composer install --no-scripts --no-suggest --no-ansi --no-interaction
         - ls -al
+test:
+    stage: test
+    script:
+#        - vendor/bin/phpunit --configuration phpunit.xml --coverage-text --colors=never
