--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,10 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "*",
+        "magento/magento-coding-standard": "^5.0",
+        "phpmd/phpmd": "@stable",
+        "squizlabs/php_codesniffer": "~3.4.0"
     },
     "autoload": {
         "files": [ "registration.php" ],
