--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,7 @@
     "require-dev": {
         "phpunit/phpunit": "*",
         "magento/magento-coding-standard": "^5.0",
-        "phpmd/phpmd": "@stable",
-        "squizlabs/php_codesniffer": "~3.4.0"
+        "phpmd/phpmd": "@stable"
     },
     "autoload": {
         "files": [ "registration.php" ],
