--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     "require-dev": {
         "phpunit/phpunit": "*",
         "magento/magento-coding-standard": "^5.0",
+        "magento/magento2-functional-testing-framework": "dev-3.0.0-RC2",
         "phpmd/phpmd": "@stable"
     },
     "autoload": {
