--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,22 +5,20 @@ before_script:
     - composer -v
 
 stages:
-    - build
     - test
 
 cache:
     paths:
-        - .composer-cache/
+        - ~/.composer-cache/
 
 install:
-    stage: build
-    script:
-        - composer config --global http-basic.repo.magento.com $COMPOSER_USER $COMPOSER_PASSWORD
-        - composer install --no-scripts --no-suggest --no-ansi --no-interaction
-        - vendor/bin/phpcs --config-set installed_paths ../../magento/magento-coding-standard/
-
-test:
     stage: test
     script:
+        - composer config --global http-basic.repo.magento.com $COMPOSER_USER $COMPOSER_PASSWORD
+        - composer install --no-scripts --no-suggest --no-ansi --no-interaction --no-progress
+        - vendor/bin/phpcs --config-set installed_paths ../../magento/magento-coding-standard/
+        - ls -al ~/
+        - ls -al ~/.cache
+        - ls -al ~/.composer
         - vendor/bin/phpcs --ignore=*/vendor/*,*/Test/*  --standard=Magento2 .
         - vendor/bin/phpmd . text vendor/magento/magento2-functional-testing-framework/dev/tests/static/Magento/CodeMessDetector/ruleset.xml --exclude vendor/,Test/
