--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "*",
+        "phpunit/phpunit": "~6.5.0",
         "magento/magento-coding-standard": "^5.0",
         "magento/magento2-functional-testing-framework": "dev-3.0.0-RC2",
         "phpmd/phpmd": "@stable"
