--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,9 +29,9 @@ phpcs:
 phpunit:
     stage: test
     script:
-        - vendor/bin/phpunit -c phpunit.xml --coverage-text --colors=never
+        - vendor/bin/phpunit -c vendor/thesgroup/magento2-testing-framework/unit/phpunit.xml --coverage-text --colors=never
 
 phpmd:
     stage: test
     script:
-        - vendor/bin/phpmd . text vendor/magento/magento2-functional-testing-framework/dev/tests/static/Magento/CodeMessDetector/ruleset.xml --exclude vendor/,Test/
+        - vendor/bin/phpmd . text vendor/thesgroup/magento2-testing-framework/static/phpmd/ruleset.xml --exclude vendor/,Test/
