--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,7 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "~6.5.0",
-        "magento/magento-coding-standard": "^5.0",
-        "thesgroup/magento2-testing-framework": "dev-master",
-        "phpmd/phpmd": "@stable"
+        "thesgroup/magento2-testing-framework": "~1.0.0"
     },
     "autoload": {
         "files": [ "registration.php" ],
