--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "TFA customer module for Magento 2",
     "homepage": "https://github.com/magetarian/customerTwoFactorAuth",
     "type": "magento2-module",
+    "version": "1.0.0",
     "repositories": [
         {
             "type": "composer",
@@ -13,8 +14,9 @@
         "php": "~7.2.0||~7.3.0",
         "magento/framework": "102.0.*",
         "magento/module-customer": "102.0.*",
-        "magento/module-checkout": "100.3.*",
-        "magento/framework-message-queue": "100.3.*",
+        "magento/module-backend": "101.0.*",
+        "magento/module-eav": "102.0.*",
+        "magento/module-store": "101.0.*",
         "msp/twofactorauth": "3.1.*"
     },
     "license": [
