--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,12 @@
         }
     ],
     "require": {
-        "php": "~7.2.0||~7.3.0",
-        "magento/framework": "102.0.*",
-        "magento/module-customer": "102.0.*",
-        "magento/module-backend": "101.0.*",
-        "magento/module-eav": "102.0.*",
-        "magento/module-store": "101.0.*",
-        "msp/twofactorauth": "3.1.*"
+        "magento/framework": "103.0.*",
+        "magento/module-customer": "103.0.*",
+        "magento/module-backend": "102.0.*",
+        "magento/module-eav": "102.1.*",
+        "magento/module-store": "101.1.*",
+        "magento/twofactorauth": "1.0.*"
     },
     "license": [
         "GPL-3.0-only"
