--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "magento/module-backend": "102.0.*",
         "magento/module-eav": "102.1.*",
         "magento/module-store": "101.1.*",
-        "magento/twofactorauth": "1.0.*"
+        "magento/module-two-factor-auth": "1.0.*"
     },
     "license": [
         "GPL-3.0-only"
