--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     ],
     "require": {
         "php": "~7.3.0||~7.4.0",
-        "magento/framework": "103.0.*",
-        "magento/module-customer": "103.0.*",
-        "magento/module-backend": "102.0.*",
-        "magento/module-eav": "102.1.*",
-        "magento/module-store": "101.1.*",
-        "magento/module-two-factor-auth": "1.0.*"
+        "magento/framework": "~103.0",
+        "magento/module-customer": "~103.0",
+        "magento/module-backend": "~102.0",
+        "magento/module-eav": "~102.1",
+        "magento/module-store": "~101.1",
+        "magento/module-two-factor-auth": "~1.0||~1.1"
     },
     "license": [
         "GPL-3.0-only"
