--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "~7.3.0||~7.4.0",
+        "php": "~7.3.0||~7.4.0||~8.1.0",
         "magento/framework": "~103.0",
         "magento/module-customer": "~103.0",
         "magento/module-backend": "~102.0",
@@ -31,9 +31,6 @@
             "email": "atishgoswami@gmail.com"
         }
     ],
-    "require-dev": {
-        "thesgroup/magento2-testing-framework": "~1.1.0"
-    },
     "autoload": {
         "files": [ "registration.php" ],
         "psr-4": {
