--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,11 @@
         "psr-4": {
             "Magetarian\\CustomerTwoFactorAuth\\": ""
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "magento/composer-dependency-version-audit-plugin": true,
+            "magento/magento-composer-installer": false
+        }
     }
 }
